# aigateway

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: anthropic-api-spec.md  best-practices.md  provider-translation.md  translate-design.md
providers/aigw/: CHANGELOG.md  Cargo.toml
providers/aigw-anthropic/: CHANGELOG.md  Cargo.toml
providers/aigw-anthropic/src/: client.rs  error.rs  lib.rs  rate_limit.rs  streaming.rs  transport.rs  types.rs
providers/aigw-anthropic/src/translate/: mod.rs  request.rs  response.rs  stream.rs  tools.rs
providers/aigw-anthropic/src/types/: count_tokens.rs  event_logging.rs  messages.rs  mod.rs  models.rs  oauth.rs
providers/aigw-core/: CHANGELOG.md  Cargo.toml
providers/aigw-core/src/: error.rs  lib.rs  translate.rs
providers/aigw-core/src/model/: mod.rs  request.rs  response.rs  stream.rs
providers/aigw-gemini/: CHANGELOG.md  Cargo.toml  README.md
providers/aigw-gemini/src/: client.rs  error.rs  lib.rs  streaming.rs  types.rs
providers/aigw-openai/: CHANGELOG.md  Cargo.toml  README.md
providers/aigw-openai-compat/: CHANGELOG.md  Cargo.toml  README.md
providers/aigw-openai-compat/src/: lib.rs  translate.rs
providers/aigw-openai/src/: client.rs  error.rs  lib.rs  sse.rs  transport.rs
providers/aigw-openai/src/translate/: mod.rs  request.rs  response.rs  responses_request.rs  responses_response.rs  responses_stream.rs  stream.rs
providers/aigw-openai/src/wire_types/: chat.rs  embeddings.rs  mod.rs  models.rs  responses.rs  responses_output.rs  shared.rs
providers/aigw/src/: lib.rs
