[workspace]
members = [
    "providers/aigw",
    "providers/aigw-core",
    "providers/aigw-openai",
    "providers/aigw-openai-compat",
    "providers/aigw-anthropic",
    "providers/aigw-gemini",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arcboxlabs/aigateway"

[workspace.dependencies]
aigw = { version = "0.3.0", path = "providers/aigw" }
aigw-core = { version = "0.3.0", path = "providers/aigw-core" }
aigw-openai = { version = "0.3.0", path = "providers/aigw-openai" }
aigw-openai-compat = { version = "0.3.0", path = "providers/aigw-openai-compat" }
aigw-anthropic = { version = "0.3.0", path = "providers/aigw-anthropic" }
aigw-gemini = { version = "0.3.0", path = "providers/aigw-gemini" }

[package]
name = "aigateway"
version.workspace = true
edition.workspace = true
description = "A unified AI Gateway for multiple LLM providers"
license.workspace = true
repository.workspace = true

[dependencies]
aigw = { workspace = true }
