[package]
name = "aigw-anthropic"
version = "0.0.1"
edition = "2024"
description = "Anthropic provider for AI Gateway"
license = "MIT"
repository = "https://github.com/AprilNEA/aigateway"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
thiserror = "2"
tokio-stream = "0.1"
bytes = "1"
eventsource-stream = "0.2"
secrecy = "0.10"
tokio = { version = "1", features = ["rt"] }
