[package]
name = "aigw-anthropic"
version = "0.0.1"
edition = "2024"
description = "Anthropic provider for AI Gateway"
license = "MIT"
repository = "https://github.com/arcboxlabs/aigateway"

[features]
default = []
claude-code = []

[dependencies]
bon = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
thiserror = "2"
tokio-stream = "0.1"
bytes = "1"
eventsource-stream = "0.2"
secrecy = "0.10"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
futures-util = "0.3"
