[package]
name = "aigw-core"
version.workspace = true
edition.workspace = true
description = "Canonical model types and translator traits for AI Gateway"
license.workspace = true
repository.workspace = true

[dependencies]
bon = "3"
bytes = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
