[package]
name = "aigw-gemini"
version = "0.1.0"
edition = "2024"
description = "Google Gemini provider for AI Gateway"
license = "MIT"
repository = "https://github.com/arcboxlabs/aigateway"

[dependencies]
bon = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
thiserror = "2"
tokio-stream = "0.1"
bytes = "1"
eventsource-stream = "0.2"
secrecy = "0.10"
tokio = { version = "1", features = ["rt"] }
