[package]
name = "aigw-openai-compat"
version = "0.0.1"
edition = "2024"
description = "Configurable OpenAI-compatible provider for AI Gateway"
license = "MIT"
repository = "https://github.com/arcboxlabs/aigateway"

[dependencies]
aigw-openai = { version = "0.1.0", path = "../aigw-openai" }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
