[package]
name = "aigw-openai-compat"
version.workspace = true
edition.workspace = true
description = "Configurable OpenAI-compatible provider for AI Gateway"
license.workspace = true
repository.workspace = true

[dependencies]
aigw-openai = { workspace = true }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
