[package]
name = "aigw-openai-compat"
version.workspace = true
edition.workspace = true
description = "Configurable OpenAI-compatible provider for AI Gateway"
license.workspace = true
repository.workspace = true

[dependencies]
aigw-core = { workspace = true }
aigw-openai = { workspace = true }
bytes = "1"
http = "1"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
