[package]
name = "aigw-openai"
version = "0.0.1"
edition = "2024"
description = "OpenAI provider for AI Gateway"
license = "MIT"
repository = "https://github.com/arcboxlabs/aigateway"

[dependencies]
bytes = "1"
eventsource-stream = "0.2"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
