[package]
name = "aigw"
version.workspace = true
edition.workspace = true
description = "Umbrella crate re-exporting all AI Gateway provider clients"
license.workspace = true
repository.workspace = true

[features]
default = ["openai", "openai-compat", "anthropic", "gemini"]
openai = ["dep:aigw-openai"]
openai-compat = ["dep:aigw-openai-compat", "openai"]
anthropic = ["dep:aigw-anthropic"]
gemini = ["dep:aigw-gemini"]

[dependencies]
aigw-openai = { workspace = true, optional = true }
aigw-openai-compat = { workspace = true, optional = true }
aigw-anthropic = { workspace = true, optional = true }
aigw-gemini = { workspace = true, optional = true }
